# scholar-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  prov.example  providers.json.example  pyproject.toml  requirements.txt
.github/workflows/: test.yml
SKILLS/: skills.md
docs/: DEPLOYMENT_AND_EXTENSIBILITY.md  MASTER_PLAN.md  PROJECT_OVERVIEW.md  SOFTWARE_DESIGN_DOCUMENT.md  WEB_APP_EVOLUTION.md  sdd.aux  sdd.out  sdd.tex
eval/: golden.example.json
examples/: sample_cv.txt
infra/n8n/: README.md  nightly_refresh.json
infra/neo4j/: schema.cypher  seed.cypher
scripts/: demo_online.py  eval.py  healthcheck.py
src/scholar/: __init__.py  cli.py  config.py  eval.py  graph_app.py  ics.py  ingest.py  maintenance.py  mcp_server.py  observability.py  state.py
src/scholar/agents/: __init__.py  critic.py  deep_scout.py  kit.py  matchmaker.py  profiler.py  prompts.py  quality_gate.py  scout.py  scribe.py
src/scholar/api/: kb.py  main.py  me.py  studio.py  surf.py
src/scholar/auth/: __init__.py  deps.py  router.py  security.py  service.py
src/scholar/db/: __init__.py  base.py  models.py  repo.py
src/scholar/kb/: __init__.py  embeddings.py  graph.py  vectors.py
src/scholar/llm/: __init__.py  client.py  families.py  providers.py  router.py
src/scholar/prompts/: __init__.py  registry.py
src/scholar/prompts/fewshots/: matchmaker.jsonl  profiler.jsonl
src/scholar/prompts/templates/matchmaker/: generic.txt
src/scholar/prompts/templates/scout_planner/: hermes.txt
src/scholar/schemas/: __init__.py  artifacts.py  match.py  opportunity.py  profile.py
src/scholar/tools/: __init__.py  crawl.py  funding.py  openalex.py  ranking.py  scraper.py  search.py
tests/: conftest.py  test_api.py  test_assistant.py  test_auth.py  test_critic.py  test_db.py  test_eval.py  test_ingest.py  test_kb_browse.py  test_maintenance.py  test_matchmaker.py  test_me.py  test_phase1.py  test_phase3.py  test_ranking.py  test_role_routing.py  test_scraper.py  test_smoke.py  test_studio.py  test_watchlist.py
web/: README.md  browse.html  discover.html  index.html  studio.html  surf.html
